added indexations opensearch endpoints